[gd_scene load_steps=67 format=2]

[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_16.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_18.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_21.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_20.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_22.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_19.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_17.png" type="Texture" id=7]
[ext_resource path="res://assets/enemies/demon_boss/04_demon_take_hit/demon_take_hit_3.png" type="Texture" id=8]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_3.png" type="Texture" id=9]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_9.png" type="Texture" id=10]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_10.png" type="Texture" id=11]
[ext_resource path="res://assets/enemies/demon_boss/02_demon_walk/demon_walk_8.png" type="Texture" id=12]
[ext_resource path="res://assets/enemies/demon_boss/01_demon_idle/demon_idle_6.png" type="Texture" id=13]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_1.png" type="Texture" id=14]
[ext_resource path="res://assets/enemies/demon_boss/01_demon_idle/demon_idle_1.png" type="Texture" id=15]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_2.png" type="Texture" id=16]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_5.png" type="Texture" id=17]
[ext_resource path="res://assets/enemies/demon_boss/02_demon_walk/demon_walk_6.png" type="Texture" id=18]
[ext_resource path="res://assets/enemies/demon_boss/02_demon_walk/demon_walk_10.png" type="Texture" id=19]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_4.png" type="Texture" id=20]
[ext_resource path="res://assets/enemies/demon_boss/02_demon_walk/demon_walk_4.png" type="Texture" id=21]
[ext_resource path="res://assets/enemies/demon_boss/02_demon_walk/demon_walk_3.png" type="Texture" id=22]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_13.png" type="Texture" id=23]
[ext_resource path="res://assets/enemies/demon_boss/04_demon_take_hit/demon_take_hit_5.png" type="Texture" id=24]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_4.png" type="Texture" id=25]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_5.png" type="Texture" id=26]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_6.png" type="Texture" id=27]
[ext_resource path="res://assets/enemies/demon_boss/01_demon_idle/demon_idle_4.png" type="Texture" id=28]
[ext_resource path="res://assets/enemies/demon_boss/04_demon_take_hit/demon_take_hit_2.png" type="Texture" id=29]
[ext_resource path="res://assets/enemies/demon_boss/02_demon_walk/demon_walk_1.png" type="Texture" id=30]
[ext_resource path="res://assets/enemies/demon_boss/02_demon_walk/demon_walk_9.png" type="Texture" id=31]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_12.png" type="Texture" id=32]
[ext_resource path="res://assets/enemies/demon_boss/04_demon_take_hit/demon_take_hit_1.png" type="Texture" id=33]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_1.png" type="Texture" id=34]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_6.png" type="Texture" id=35]
[ext_resource path="res://assets/enemies/demon_boss/01_demon_idle/demon_idle_2.png" type="Texture" id=36]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_15.png" type="Texture" id=37]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_7.png" type="Texture" id=38]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_7.png" type="Texture" id=39]
[ext_resource path="res://assets/enemies/demon_boss/02_demon_walk/demon_walk_5.png" type="Texture" id=40]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_3.png" type="Texture" id=41]
[ext_resource path="res://assets/enemies/demon_boss/02_demon_walk/demon_walk_2.png" type="Texture" id=42]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_8.png" type="Texture" id=43]
[ext_resource path="res://assets/enemies/demon_boss/02_demon_walk/demon_walk_12.png" type="Texture" id=44]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_9.png" type="Texture" id=45]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_8.png" type="Texture" id=46]
[ext_resource path="res://assets/enemies/demon_boss/01_demon_idle/demon_idle_3.png" type="Texture" id=47]
[ext_resource path="res://assets/enemies/demon_boss/01_demon_idle/demon_idle_5.png" type="Texture" id=48]
[ext_resource path="res://assets/enemies/demon_boss/02_demon_walk/demon_walk_11.png" type="Texture" id=49]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_11.png" type="Texture" id=50]
[ext_resource path="res://assets/enemies/demon_boss/02_demon_walk/demon_walk_7.png" type="Texture" id=51]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_10.png" type="Texture" id=52]
[ext_resource path="res://assets/enemies/demon_boss/04_demon_take_hit/demon_take_hit_4.png" type="Texture" id=53]
[ext_resource path="res://assets/enemies/demon_boss/03_demon_cleave/demon_cleave_14.png" type="Texture" id=54]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_2.png" type="Texture" id=55]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_12.png" type="Texture" id=56]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_14.png" type="Texture" id=57]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_13.png" type="Texture" id=58]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_15.png" type="Texture" id=59]
[ext_resource path="res://assets/enemies/demon_boss/05_demon_death/demon_death_11.png" type="Texture" id=60]
[ext_resource path="res://scenes/player_detection_zone.tscn" type="PackedScene" id=61]
[ext_resource path="res://scripts/demon_boss.gd" type="Script" id=62]
[ext_resource path="res://assets/sound_effects/demon/demon_damage.wav" type="AudioStream" id=63]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 36 ), ExtResource( 47 ), ExtResource( 28 ), ExtResource( 48 ), ExtResource( 13 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 55 ), ExtResource( 9 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 43 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 60 ), ExtResource( 56 ), ExtResource( 58 ), ExtResource( 57 ), ExtResource( 59 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "Death",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 41 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 27 ), ExtResource( 39 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 52 ), ExtResource( 50 ), ExtResource( 32 ), ExtResource( 23 ), ExtResource( 54 ), ExtResource( 37 ) ],
"loop": true,
"name": "Attack",
"speed": 8.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 42 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 40 ), ExtResource( 18 ), ExtResource( 51 ), ExtResource( 12 ), ExtResource( 31 ), ExtResource( 19 ), ExtResource( 49 ), ExtResource( 44 ) ],
"loop": true,
"name": "Walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 29 ), ExtResource( 8 ), ExtResource( 53 ), ExtResource( 24 ) ],
"loop": true,
"name": "TakeHit",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.9804, 16.5637 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27.5, 5.125 )

[node name="DemonBoss" type="KinematicBody2D" groups=["enemies"]]
scale = Vector2( 3, 3 )
collision_layer = 4
script = ExtResource( 62 )
boss_name = "Astaroth"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, -79 )
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 6, -42 )
polygon = PoolVector2Array( -11, 10.6667, -27, 23, -23.3333, 35.6667, -31.6667, 40.6667, 26.3333, 41.6667, 28.3333, 36.6667, 22, 22.3333, 21.3333, -2.33334, 0.666667, -27.3333, -9.33333, -29.6667, -13.6667, -37, -6.33333, -48.6667, -14.3333, -45, -17.6667, -41.3333, -16.3333, -30.3333, -20.3333, -29.6667, -25, -32.6667, -26, -42, -21.3333, -48.3333, -27.3333, -44, -28.3333, -32.6667, -25.3333, -26, -29.6667, -18.3333, -26, -7.33334, -33, 6, -17.6667, -4.33334, -7, 5.66666 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 61 )]
modulate = Color( 1, 1, 1, 0.458824 )

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( -56, -1.5 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 8.25, -13.75 )
scale = Vector2( 1.20562, 0.875587 )
shape = SubResource( 3 )

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
modulate = Color( 0.94902, 0.341176, 0.0431373, 1 )
position = Vector2( -64.6667, -5.33333 )
shape = SubResource( 4 )

[node name="HitArea" type="Area2D" parent="." groups=["enemies"]]
collision_layer = 4
collision_mask = 112

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="HitArea"]
position = Vector2( 6, -42 )
polygon = PoolVector2Array( -11, 10.6667, -27, 23, -23.3333, 35.6667, -31.6667, 40.6667, 26.3333, 41.6667, 28.3333, 36.6667, 22, 22.3333, 21.3333, -2.33334, 0.666667, -27.3333, -9.33333, -29.6667, -13.6667, -37, -6.33333, -48.6667, -14.3333, -45, -17.6667, -41.3333, -16.3333, -30.3333, -20.3333, -29.6667, -25, -32.6667, -26, -42, -21.3333, -48.3333, -27.3333, -44, -28.3333, -32.6667, -25.3333, -26, -29.6667, -18.3333, -26, -7.33334, -33, 6, -17.6667, -4.33334, -7, 5.66666 )

[node name="damage_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 63 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="body_exited" from="AttackDetector" to="." method="_on_AttackDetector_body_exited"]
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
